--- a/wp-content/themes/teamlab-blog-2-0/languages/ru_RU.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/ru_RU.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Twenty Ten 1.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/twentyten\n"
 "POT-Creation-Date: 2020-10-16 16:44+0300\n"
-"PO-Revision-Date: 2020-10-16 16:58+0300\n"
+"PO-Revision-Date: 2020-10-20 11:36+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ru_RU\n"
@@ -454,7 +454,7 @@ msgstr "(Редактировать)"
 #: wp-content/themes/teamlab-blog-2-0/header.php:85
 #: wp-content/themes/teamlab-blog-2-0/searchform.php:9
 msgid "Find news, tips and how-tos"
-msgstr "Искать новости, советы и инструкции"
+msgstr "Искать новости и советы"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:101
 msgid "Hosting providers"
