Added translations and delete category on the main page for amp

--- a/wp-content/languages/plugins/accelerated-mobile-pages-it_IT.po
+++ b/wp-content/languages/plugins/accelerated-mobile-pages-it_IT.po
@@ -995,7 +995,7 @@ msgstr ""
 
 #: includes/options/admin-config.php:1514
 msgid "Related Post"
-msgstr ""
+msgstr "Post relativo"
 
 #: includes/options/admin-config.php:1522
 msgid "Navigate"
