--- a/wp-content/languages/plugins/accelerated-mobile-pages-pt_BR.po
+++ b/wp-content/languages/plugins/accelerated-mobile-pages-pt_BR.po
@@ -995,7 +995,7 @@ msgstr ""
 
 #: includes/options/admin-config.php:1514
 msgid "Related Post"
-msgstr ""
+msgstr "Postagem relacionada"
 
 #: includes/options/admin-config.php:1522
 msgid "Navigate"
