--- a/wp-content/languages/plugins/accelerated-mobile-pages-ru_RU.po
+++ b/wp-content/languages/plugins/accelerated-mobile-pages-ru_RU.po
@@ -996,7 +996,7 @@ msgstr ""
 
 #: includes/options/admin-config.php:1514
 msgid "Related Post"
-msgstr ""
+msgstr "Связанный пост"
 
 #: includes/options/admin-config.php:1522
 msgid "Navigate"
