--- a/wp-content/plugins/democracy-poll/languages/democracy-poll-de_DE.po
+++ b/wp-content/plugins/democracy-poll/languages/democracy-poll-de_DE.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Democracy\n"
 "POT-Creation-Date: 2017-03-12 15:40+0500\n"
-"PO-Revision-Date: 2017-03-12 15:42+0500\n"
+"PO-Revision-Date: 2021-10-18 12:54+0300\n"
 "Last-Translator: Xrizzy <xrizzy@web.de>\n"
 "Language-Team: \n"
 "Language: de_DE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.12\n"
+"X-Generator: Poedit 2.4.3\n"
 "X-Poedit-Basepath: ..\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -884,12 +884,12 @@ msgstr "Fuge deine Antwort hinzu"
 #: class.DemPoll.php:244
 msgctxt "front"
 msgid "Already voted..."
-msgstr "Linienfarbe (fur abgestimmte User)"
+msgstr "Schon abgestimmt…"
 
 #: class.DemPoll.php:245 class.DemPoll.php:383
 msgctxt "front"
 msgid "Vote"
-msgstr "Abstimmung"
+msgstr "Abstimmen"
 
 #: class.DemPoll.php:280
 msgctxt "front"
