--- a/wp-content/themes/teamlab-blog-2-0/languages/ja_JP.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/ja_JP.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: _s 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/tags/_s\n"
 "POT-Creation-Date: 2022-04-19 14:26+0300\n"
-"PO-Revision-Date: 2022-04-21 13:16+0300\n"
+"PO-Revision-Date: 2022-04-22 10:55+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -1293,7 +1293,7 @@ msgstr ""
 #: wp-content/themes/teamlab-blog-2-0/functions.php:209
 #, php-format
 msgid "<span class=\"%2$s\">By %3$s</span>"
-msgstr ""
+msgstr "<span class=\"%2$s\">著者： %3$s</span>"
 
 #: wp-content/themes/teamlab-blog-2-0/functions.php:561
 #, php-format
