--- a/wp-content/themes/teamlab-blog-2-0/languages/es_ES.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/es_ES.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Twenty Ten 1.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/twentyten\n"
 "POT-Creation-Date: 2022-04-25 15:15+0300\n"
-"PO-Revision-Date: 2022-04-25 15:32+0300\n"
+"PO-Revision-Date: 2022-10-03 12:28+0500\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es_ES\n"
@@ -16,14 +16,13 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.4.3\n"
+"X-Generator: Poedit 3.1.1\n"
 "X-Poedit-KeywordsList: _e;__\n"
 "X-Poedit-Basepath: ../../../..\n"
 "X-Poedit-SearchPath-0: wp-content/themes/teamlab-blog-2-0\n"
 "X-Poedit-SearchPath-1: wp-content/plugins/in-the-press\n"
 "X-Poedit-SearchPath-2: wp-includes/widgets/class-wp-widget-recent-posts.php\n"
-"X-Poedit-SearchPath-3: wp-content/plugins/wp-discourse/lib/discourse-comment-"
-"formatter.php\n"
+"X-Poedit-SearchPath-3: wp-content/plugins/wp-discourse/lib/discourse-comment-formatter.php\n"
 
 #: wp-content/plugins/in-the-press/in-the-press.php:26
 msgid "Your site&#8217;s in the press."
@@ -41,12 +40,8 @@ msgid "Recent Posts"
 msgstr "ENTRADAS RECIENTES"
 
 #: wp-content/plugins/in-the-press/in-the-press.php:97
-msgid ""
-"View all <div class=\"no-wrap\">news&nbsp;<div class=\"grey-arrow\"></div></"
-"div>"
-msgstr ""
-"Ver todas las <div class=\"no-wrap\">noticias&nbsp;<div class=\"grey-arrow"
-"\"></div></div>"
+msgid "View all <div class=\"no-wrap\">news&nbsp;<div class=\"grey-arrow\"></div></div>"
+msgstr "Ver todas las <div class=\"no-wrap\">noticias&nbsp;<div class=\"grey-arrow\"></div></div>"
 
 #: wp-content/plugins/in-the-press/in-the-press.php:103
 #: wp-includes/widgets/class-wp-widget-recent-posts.php:102
@@ -77,12 +72,8 @@ msgid "404 Page not found"
 msgstr "404 Página no encontrada"
 
 #: wp-content/themes/teamlab-blog-2-0/404.php:18
-msgid ""
-"The page you were looking for doesn't exist, isn't available, or was loading "
-"incorrectly."
-msgstr ""
-"La página que usted está buscando no existe, no está disponible o fue "
-"cargada incorrectamente."
+msgid "The page you were looking for doesn't exist, isn't available, or was loading incorrectly."
+msgstr "La página que usted está buscando no existe, no está disponible o fue cargada incorrectamente."
 
 #: wp-content/themes/teamlab-blog-2-0/404.php:19
 msgid "Go back to Home"
@@ -157,7 +148,7 @@ msgstr "Conformidad con la HIPAA"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/footer.php:37
 #: wp-content/themes/teamlab-blog-2-0/header.php:227
-msgid "Integrations"
+msgid "For business"
 msgstr "Integraciones"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/footer.php:39
@@ -635,8 +626,7 @@ msgid "Try ONLYOFFICE in the cloud"
 msgstr "Probar ONLYOFFICE en la nube"
 
 #: wp-content/themes/teamlab-blog-2-0/comments.php:17
-msgid ""
-"This post is password protected. Enter the password to view any comments."
+msgid "This post is password protected. Enter the password to view any comments."
 msgstr ""
 
 #: wp-content/themes/teamlab-blog-2-0/comments.php:33
@@ -804,12 +794,12 @@ msgid "(Edit)"
 msgstr "(Editar)"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:117
-msgid "Cloud Computing Insider Awards 2022: <b>Vote for ONLYOFFICE</b>"
-msgstr "Premios de Cloud Computing Insider 2022: <b>vota por ONLYOFFICE</b>"
+msgid "Discover <b>ONLYOFFICE Docs v7.2</b> with plugin marketplace, new form fields, live viewer, ligatures,  updated UI, and more"
+msgstr "Descubre <b>ONLYOFFICE Docs v7.2</b> con un marketplace de plugins, nuevos campos de formulario, visor en vivo, ligaduras, interfaz de usuario actualizada y mucho más"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:124
-msgid "<b>Vote for ONLYOFFICE</b>"
-msgstr "<b>Vota por ONLYOFFICE</b>"
+msgid "<b>ONLYOFFICE Docs v7.2</b>"
+msgstr "<b>Descubre ONLYOFFICE Docs v7.2</b>"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:152
 #: wp-content/themes/teamlab-blog-2-0/searchform.php:9
@@ -838,11 +828,8 @@ msgid "OFORMS"
 msgstr ""
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:218
-msgid ""
-"OFORMS, free <span class=\"nowrap\">ready-to-fill</span> out online document "
-"forms"
-msgstr ""
-"OFORMS, formularios gratuitos de documentos listos para rellenar en línea"
+msgid "OFORMS, free <span class=\"nowrap\">ready-to-fill</span> out online document forms"
+msgstr "OFORMS, formularios gratuitos de documentos listos para rellenar en línea"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:243
 msgid "Redmine"
@@ -858,15 +845,11 @@ msgstr "Para desarrolladores"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:252
 msgid "Integrate ONLYOFFICE Docs to bring document editing to your app users"
-msgstr ""
-"Integra ONLYOFFICE Docs para ofrecer la edición de documentos a los usuarios "
-"de tu aplicación"
+msgstr "Integra ONLYOFFICE Docs para ofrecer la edición de documentos a los usuarios de tu aplicación"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:285
-msgid ""
-"Find out the list of all the authorized ONLYOFFICE resellers in your area"
-msgstr ""
-"Consulta la lista de todos los socios autorizados de ONLYOFFICE en tu zona"
+msgid "Find out the list of all the authorized ONLYOFFICE resellers in your area"
+msgstr "Consulta la lista de todos los socios autorizados de ONLYOFFICE en tu zona"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:300
 #: wp-content/themes/teamlab-blog-2-0/header.php:309
@@ -949,12 +932,8 @@ msgstr "Recaptcha incorrecta"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:407
 #: wp-content/themes/teamlab-blog-2-0/subscribe-blue.php:33
-msgid ""
-"By clicking “Subscribe”, you understand and agree to <u>our Privacy "
-"statement</u>"
-msgstr ""
-"Al hacer clic en \"Suscribirse\", usted entiende y acepta <u>nuestra "
-"Política de privacidad</u>"
+msgid "By clicking “Subscribe”, you understand and agree to <u>our Privacy statement</u>"
+msgstr "Al hacer clic en \"Suscribirse\", usted entiende y acepta <u>nuestra Política de privacidad</u>"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:410
 #: wp-content/themes/teamlab-blog-2-0/subscribe-blue.php:37
@@ -964,9 +943,7 @@ msgstr "Confirme su suscripción"
 #: wp-content/themes/teamlab-blog-2-0/header.php:411
 #: wp-content/themes/teamlab-blog-2-0/subscribe-blue.php:38
 msgid "We sent an email message with confirmation to your email address"
-msgstr ""
-"Hemos enviado un correo electrónico con la confirmación a su dirección de "
-"correo electrónico"
+msgstr "Hemos enviado un correo electrónico con la confirmación a su dirección de correo electrónico"
 
 #: wp-content/themes/teamlab-blog-2-0/in-the-press.php:30
 msgid "BLOG"
@@ -994,8 +971,7 @@ msgstr "Síganos en"
 
 #: wp-content/themes/teamlab-blog-2-0/template-parts/content-none.php:24
 #, php-format
-msgid ""
-"Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
+msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
 msgstr ""
 
 #: wp-content/themes/teamlab-blog-2-0/templates/activation.php:40
@@ -1033,19 +1009,11 @@ msgid "Your site&#8217;s most recent Posts."
 msgstr ""
 
 #: wp-includes/widgets/class-wp-widget-recent-posts.php:95
-msgid ""
-"View all <div class=\"no-wrap\">posts&nbsp;<div class=\"grey-arrow\"></div></"
-"div>"
-msgstr ""
-"Ver todos los <div class=\"no-wrap\">entradas&nbsp;<div class=\"grey-arrow"
-"\"></div></div>"
+msgid "View all <div class=\"no-wrap\">posts&nbsp;<div class=\"grey-arrow\"></div></div>"
+msgstr "Ver todos los <div class=\"no-wrap\">entradas&nbsp;<div class=\"grey-arrow\"></div></div>"
 
-#~ msgid ""
-#~ "<b>ONLYOFFICE 7.0:</b> <span>online forms</span>, password protection in "
-#~ "sheets, collaboration improvements and much more"
-#~ msgstr ""
-#~ "<b>ONLYOFFICE 7.0:</b> <span>formularios en línea</span>, protección con "
-#~ "contraseña en las hojas de cálculo, mejoras en la colaboración y mucho más"
+#~ msgid "<b>ONLYOFFICE 7.0:</b> <span>online forms</span>, password protection in sheets, collaboration improvements and much more"
+#~ msgstr "<b>ONLYOFFICE 7.0:</b> <span>formularios en línea</span>, protección con contraseña en las hojas de cálculo, mejoras en la colaboración y mucho más"
 
 #~ msgid "ONLYOFFICE 7.0 released"
 #~ msgstr "Se ha lanzado ONLYOFFICE 7.0"
@@ -1056,43 +1024,23 @@ msgstr ""
 #~ msgid "follow us on:"
 #~ msgstr "Síganos en:"
 
-#~ msgid ""
-#~ "Meet ONLYOFFICE Private Rooms where every symbol you type is encrypted "
-#~ "<span class=\"nowrap\">end-to-end</span>"
-#~ msgstr ""
-#~ "Descubre las Salas privadas de ONLYOFFICE, donde cada uno de los símbolos "
-#~ "que escribes se encripta de extremo a extremo"
+#~ msgid "Meet ONLYOFFICE Private Rooms where every symbol you type is encrypted <span class=\"nowrap\">end-to-end</span>"
+#~ msgstr "Descubre las Salas privadas de ONLYOFFICE, donde cada uno de los símbolos que escribes se encripta de extremo a extremo"
 
-#~ msgid ""
-#~ "<b>ONLYOFFICE Advent Calendar</b>. Get new gifts and discounts each day!"
-#~ msgstr ""
-#~ "<b>Calendario de Adviento de ONLYOFFICE</b>. ¡Consigue nuevos regalos y "
-#~ "descuentos cada día!"
+#~ msgid "<b>ONLYOFFICE Advent Calendar</b>. Get new gifts and discounts each day!"
+#~ msgstr "<b>Calendario de Adviento de ONLYOFFICE</b>. ¡Consigue nuevos regalos y descuentos cada día!"
 
 #~ msgid "<b>ONLYOFFICE Advent Calendar</b>"
 #~ msgstr "<b>Calendario de Adviento de ONLYOFFICE</b>"
 
-#~ msgid ""
-#~ "<b>ONLYOFFICE Docs v6.4</b> with conditional formatting, new scaling "
-#~ "options, and WOPI protocol support "
-#~ msgstr ""
-#~ "<b>ONLYOFFICE Docs v6.4</b> con el formato condicional, nuevas opciones "
-#~ "de escalado y soporte del protocolo WOPI"
+#~ msgid "<b>ONLYOFFICE Docs v6.4</b> with conditional formatting, new scaling options, and WOPI protocol support "
+#~ msgstr "<b>ONLYOFFICE Docs v6.4</b> con el formato condicional, nuevas opciones de escalado y soporte del protocolo WOPI"
 
-#~ msgid ""
-#~ "How ONLYOFFICE and Nextcloud ensure streamlined workflow at the Vegan in "
-#~ "Leipzig project"
-#~ msgstr ""
-#~ "Cómo ONLYOFFICE y Nextcloud garantizan un flujo de trabajo racionalizado "
-#~ "en el proyecto Vegan in Leipzig"
+#~ msgid "How ONLYOFFICE and Nextcloud ensure streamlined workflow at the Vegan in Leipzig project"
+#~ msgstr "Cómo ONLYOFFICE y Nextcloud garantizan un flujo de trabajo racionalizado en el proyecto Vegan in Leipzig"
 
-#~ msgid ""
-#~ "How Germany’s public radio and television deployed ONLYOFFICE for "
-#~ "seamless online content collaboration within Nextcloud"
-#~ msgstr ""
-#~ "Cómo la radio y la televisión públicas de Alemania desplegaron ONLYOFFICE "
-#~ "para conseguir una colaboración de contenido en línea sin problemas "
-#~ "dentro de Nextcloud"
+#~ msgid "How Germany’s public radio and television deployed ONLYOFFICE for seamless online content collaboration within Nextcloud"
+#~ msgstr "Cómo la radio y la televisión públicas de Alemania desplegaron ONLYOFFICE para conseguir una colaboración de contenido en línea sin problemas dentro de Nextcloud"
 
 #~ msgid "Personal Use"
 #~ msgstr "Oficina Personal"
@@ -1121,12 +1069,8 @@ msgstr ""
 #~ msgid "onlyoffice-in-the-press"
 #~ msgstr "es/onlyoffice-in-the-press"
 
-#~ msgid ""
-#~ "Online documents editors and productivity business tools provided as a "
-#~ "SaaS"
-#~ msgstr ""
-#~ "Editores de documentos en línea y herramientas empresariales de "
-#~ "productividad proporcionadas como SaaS"
+#~ msgid "Online documents editors and productivity business tools provided as a SaaS"
+#~ msgstr "Editores de documentos en línea y herramientas empresariales de productividad proporcionadas como SaaS"
 
 #~ msgid "Overview"
 #~ msgstr "Descripción"
@@ -1146,11 +1090,8 @@ msgstr ""
 #~ msgid "Cloud for personal use"
 #~ msgstr "Nube para uso personal"
 
-#~ msgid ""
-#~ "Online document editors and productivity business tools at private network"
-#~ msgstr ""
-#~ "Editores de documentos en línea y herramientas empresariales de "
-#~ "productividad en red privada"
+#~ msgid "Online document editors and productivity business tools at private network"
+#~ msgstr "Editores de documentos en línea y herramientas empresariales de productividad en red privada"
 
 #~ msgid "Self-hosted. Try for"
 #~ msgstr "Autohospedado. Pruebe"
@@ -1171,9 +1112,7 @@ msgstr ""
 #~ msgstr "Integration Edition"
 
 #~ msgid "Online document editors and connectors for popular web services"
-#~ msgstr ""
-#~ "Editores de documentos en línea y conectores para los servicios web más "
-#~ "populares"
+#~ msgstr "Editores de documentos en línea y conectores para los servicios web más populares"
 
 #~ msgid "Self-hosted. Get started"
 #~ msgstr "Autohospedado. Comience"
@@ -1203,9 +1142,7 @@ msgstr ""
 #~ msgstr "Community Edition vs Integration Edition"
 
 #~ msgid "Online document editors to integrate with a service you are building"
-#~ msgstr ""
-#~ "Editores de documentos en línea para integrar con un servicio que está "
-#~ "construyendo"
+#~ msgstr "Editores de documentos en línea para integrar con un servicio que está construyendo"
 
 #~ msgid "Dual licensing"
 #~ msgstr "Doble licencia"
@@ -1246,9 +1183,7 @@ msgstr ""
 #~ msgid "Case studies"
 #~ msgstr "Historias de clientes"
 
-#~ msgid ""
-#~ "By clicking \"Subscribe\", you agree to the rules for using the service "
-#~ "and processing personal data."
+#~ msgid "By clicking \"Subscribe\", you agree to the rules for using the service and processing personal data."
 #~ msgstr ""
 #~ "Al hacer clic en \"Suscribirse\", usted \n"
 #~ "acepta las normas de uso del \n"
