menu finished with translate footer update 7.2

--- a/wp-content/themes/teamlab-blog-2-0/languages/it_IT.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/it_IT.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: _s 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/tags/_s\n"
 "POT-Creation-Date: 2022-04-25 15:09+0300\n"
-"PO-Revision-Date: 2022-10-12 16:55+0500\n"
+"PO-Revision-Date: 2022-10-13 11:29+0500\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: it_IT\n"
@@ -320,8 +320,8 @@ msgstr "Soluzioni"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:44
 #: wp-content/themes/teamlab-blog-2-0/footer.php:81
-msgid "By size"
-msgstr "Per dimensione"
+msgid "SOLUTIONS BY SIZE"
+msgstr "SOLUZIONI PER DIMENSIONE"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:49
 #: wp-content/themes/teamlab-blog-2-0/footer.php:86
@@ -340,8 +340,8 @@ msgstr "Uso domestico"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:60
 #: wp-content/themes/teamlab-blog-2-0/footer.php:99
-msgid "By industry"
-msgstr "Per industria"
+msgid "SOLUTIONS BY INDUSTRY"
+msgstr "SOLUZIONI PER INDUSTRIA"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:68
 #: wp-content/themes/teamlab-blog-2-0/footer.php:107
