--- a/wp-content/themes/teamlab-blog-2-0/languages/fr_FR.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/fr_FR.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: teamlab-blog-2-0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/twentyten\n"
 "POT-Creation-Date: 2022-04-25 15:17+0300\n"
-"PO-Revision-Date: 2022-10-12 16:55+0500\n"
+"PO-Revision-Date: 2022-10-13 11:28+0500\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr_FR\n"
@@ -328,8 +328,8 @@ msgstr "Solutions"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:44
 #: wp-content/themes/teamlab-blog-2-0/footer.php:81
-msgid "By size"
-msgstr "Par taille"
+msgid "SOLUTIONS BY SIZE"
+msgstr "SOLUTIONS PAR TAILLE"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:49
 #: wp-content/themes/teamlab-blog-2-0/footer.php:86
@@ -348,8 +348,8 @@ msgstr "Utilisation à domicile"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:60
 #: wp-content/themes/teamlab-blog-2-0/footer.php:99
-msgid "By industry"
-msgstr "Par secteur"
+msgid "SOLUTIONS BY INDUSTRY"
+msgstr "SOLUTIONS PAR SECTEUR"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:68
 #: wp-content/themes/teamlab-blog-2-0/footer.php:107
