--- a/wp-content/themes/teamlab-blog-2-0/languages/ru_RU.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/ru_RU.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Twenty Ten 1.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/twentyten\n"
 "POT-Creation-Date: 2022-04-19 14:32+0300\n"
-"PO-Revision-Date: 2022-10-12 16:55+0500\n"
+"PO-Revision-Date: 2022-10-13 11:29+0500\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ru_RU\n"
@@ -327,8 +327,8 @@ msgstr "Решения"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:44
 #: wp-content/themes/teamlab-blog-2-0/footer.php:81
-msgid "By size"
-msgstr "По размеру"
+msgid "SOLUTIONS BY SIZE"
+msgstr "РЕШЕНИЯ ПО РАЗМЕРУ"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:49
 #: wp-content/themes/teamlab-blog-2-0/footer.php:86
@@ -347,8 +347,8 @@ msgstr "Домашнее использование"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:60
 #: wp-content/themes/teamlab-blog-2-0/footer.php:99
-msgid "By industry"
-msgstr "По отрасли"
+msgid "SOLUTIONS BY INDUSTRY"
+msgstr "РЕШЕНИЯ ПО ОТРАСЛИ"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:68
 #: wp-content/themes/teamlab-blog-2-0/footer.php:107
