--- a/wp-content/themes/teamlab-blog-2-0/languages/de_DE.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/de_DE.po
@@ -805,8 +805,8 @@ msgid "(Edit)"
 msgstr "(Bearbeiten)"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:117
-msgid "Discover <b>ONLYOFFICE Docs v7.2</b> with plugin marketplace, new form fields, live viewer, ligatures,  updated UI, and more"
-msgstr "Entdecken Sie <b>ONLYOFFICE Docs v7.2</b> mit einem Marketplace von Plugins, neuen Formularfeldern, Live-Viewer, Ligaturen, aktualisierter Benutzeroberfläche und mehr"
+msgid "Discover <b>ONLYOFFICE Docs v7.2</b> with plugin marketplace, new form fields, live viewer, ligatures, <br> updated UI, and more"
+msgstr "Entdecken Sie <b>ONLYOFFICE Docs v7.2</b> mit einem Marketplace von Plugins, neuen Formularfeldern, Live-Viewer, Ligaturen, <br> aktualisierter Benutzeroberfläche und mehr"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:124
 msgid "<b>ONLYOFFICE Docs v7.2</b>"
