--- a/wp-content/themes/teamlab-blog-2-0/languages/it_IT.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/it_IT.po
@@ -802,8 +802,8 @@ msgid "(Edit)"
 msgstr "(Modificare)"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:117
-msgid "Discover <b>ONLYOFFICE Docs v7.2</b> with plugin marketplace, new form fields, live viewer, ligatures,  updated UI, and more"
-msgstr "Scopri <b>ONLYOFFICE Docs v7.2</b> con marketplace di plugin, nuovi campi dei moduli compilabili, visualizzatore live, legature, interfaccia utente aggiornata e altro ancora"
+msgid "Discover <b>ONLYOFFICE Docs v7.2</b> with plugin marketplace, new form fields, live viewer, ligatures, <br> updated UI, and more"
+msgstr "Scopri <b>ONLYOFFICE Docs v7.2</b> con marketplace di plugin, nuovi campi dei moduli compilabili, visualizzatore live, legature, <br> interfaccia utente aggiornata e altro ancora"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:124
 msgid "<b>ONLYOFFICE Docs v7.2</b>"
